{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 124,
  "lineage": "75286563-332e-db63-2c9b-708da702a241",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:network-acl/acl-091b3dcbb397c26b9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 5000,
                "to_port": 0
              }
            ],
            "id": "acl-091b3dcbb397c26b9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.10.10.0/24",
                "from_port": 1433,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 1433
              }
            ],
            "owner_id": "352515133004",
            "subnet_ids": [
              "subnet-015fcb0d2d0041386",
              "subnet-02bac0435962aa8b5"
            ],
            "tags": {
              "Name": "new-database-subnet-acl"
            },
            "tags_all": {
              "Name": "new-database-subnet-acl"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "internal_db_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:network-acl/acl-04917d204fa27ba8a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 5000,
                "to_port": 0
              }
            ],
            "id": "acl-04917d204fa27ba8a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.10.10.0/24",
                "from_port": 1433,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 1433
              }
            ],
            "owner_id": "352515133004",
            "subnet_ids": [
              "subnet-0996292cab2ebd838",
              "subnet-0a07d53dd706cb5f8"
            ],
            "tags": {
              "Name": "new-internal-database-subnet-acl"
            },
            "tags_all": {
              "Name": "new-internal-database-subnet-acl"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redis_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:network-acl/acl-0a090a8e309c7bc96",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0a090a8e309c7bc96",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32768,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "352515133004",
            "subnet_ids": [
              "subnet-0347d55d067066be3",
              "subnet-09fad66e8bc4aabb3"
            ],
            "tags": {
              "Name": "new-redis-subnet-acl"
            },
            "tags_all": {
              "Name": "new-redis-subnet-acl"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "db_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-080da7c4a9d5d2389",
            "network_acl_id": "acl-091b3dcbb397c26b9",
            "subnet_id": "subnet-02bac0435962aa8b5"
          },
          "dependencies": [
            "aws_network_acl.db_acl",
            "aws_subnet.db_subnet_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "db_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-06c7d161e40d499a2",
            "network_acl_id": "acl-091b3dcbb397c26b9",
            "subnet_id": "subnet-0c1d29b7373748f4b"
          },
          "dependencies": [
            "aws_network_acl.db_acl",
            "aws_subnet.db_subnet_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "internal_db_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-00a385ab506fca89e",
            "network_acl_id": "acl-04917d204fa27ba8a",
            "subnet_id": "subnet-0a07d53dd706cb5f8"
          },
          "dependencies": [
            "aws_network_acl.internal_db_acl",
            "aws_subnet.internal_db_subnet_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "internal_db_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-070ea3c6fe315e7c1",
            "network_acl_id": "acl-04917d204fa27ba8a",
            "subnet_id": "subnet-02913997209ffdf66"
          },
          "dependencies": [
            "aws_network_acl.internal_db_acl",
            "aws_subnet.internal_db_subnet_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "redis_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c87b2f9661769ab0",
            "network_acl_id": "acl-0a090a8e309c7bc96",
            "subnet_id": "subnet-09fad66e8bc4aabb3"
          },
          "dependencies": [
            "aws_network_acl.redis_acl",
            "aws_subnet.redis_subnet_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "redis_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-099881960cb08d598",
            "network_acl_id": "acl-0a090a8e309c7bc96",
            "subnet_id": "subnet-0d9228424c225eebe"
          },
          "dependencies": [
            "aws_network_acl.redis_acl",
            "aws_subnet.redis_subnet_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-373475122",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-091b3dcbb397c26b9",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 5000,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.db_acl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "db_allow_bastion_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.10.10.0/24",
            "egress": false,
            "from_port": 1433,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-894563777",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-091b3dcbb397c26b9",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 1433
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.db_acl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "internal_db_allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-624609818",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04917d204fa27ba8a",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 5000,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.internal_db_acl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "internal_db_allow_bastion_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.10.10.0/24",
            "egress": false,
            "from_port": 1433,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1093356427",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04917d204fa27ba8a",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 1433
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.internal_db_acl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redis_ephemeral_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 32768,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-926518210",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a090a8e309c7bc96",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.redis_acl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redis_http_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-561931124",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a090a8e309c7bc96",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.redis_acl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redis_https_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1197734541",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a090a8e309c7bc96",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.redis_acl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:route-table/rtb-0c0172680aed65fd4",
            "id": "rtb-0c0172680aed65fd4",
            "owner_id": "352515133004",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "NewDatabaseSubnetA"
            },
            "tags_all": {
              "Name": "NewDatabaseSubnetA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:route-table/rtb-0bd27cea552455749",
            "id": "rtb-0bd27cea552455749",
            "owner_id": "352515133004",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "NewDatabaseSubnetC"
            },
            "tags_all": {
              "Name": "NewDatabaseSubnetC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal_db_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:route-table/rtb-03ef3f2e33328d058",
            "id": "rtb-03ef3f2e33328d058",
            "owner_id": "352515133004",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "NewInternalDatabaseSubnetA"
            },
            "tags_all": {
              "Name": "NewInternalDatabaseSubnetA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal_db_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:route-table/rtb-0a7cd97d0bc981b89",
            "id": "rtb-0a7cd97d0bc981b89",
            "owner_id": "352515133004",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "NewInternalDatabaseSubnet"
            },
            "tags_all": {
              "Name": "NewInternalDatabaseSubnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redis_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:route-table/rtb-09eddc77146674c01",
            "id": "rtb-09eddc77146674c01",
            "owner_id": "352515133004",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "NewRedisSubnetA"
            },
            "tags_all": {
              "Name": "NewRedisSubnetA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redis_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:route-table/rtb-0e7bec63b84d4bb5e",
            "id": "rtb-0e7bec63b84d4bb5e",
            "owner_id": "352515133004",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "NewRedisSubnetC"
            },
            "tags_all": {
              "Name": "NewRedisSubnetC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07932a2de296aff41",
            "route_table_id": "rtb-0c0172680aed65fd4",
            "subnet_id": "subnet-02bac0435962aa8b5"
          },
          "dependencies": [
            "aws_route_table.db_subnet_a",
            "aws_subnet.db_subnet_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055581dcb82af7932",
            "route_table_id": "rtb-0bd27cea552455749",
            "subnet_id": "subnet-0c1d29b7373748f4b"
          },
          "dependencies": [
            "aws_route_table.db_subnet_c",
            "aws_subnet.db_subnet_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal_db_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d1a90f75543c949",
            "route_table_id": "rtb-03ef3f2e33328d058",
            "subnet_id": "subnet-0a07d53dd706cb5f8"
          },
          "dependencies": [
            "aws_route_table.internal_db_subnet_a",
            "aws_subnet.internal_db_subnet_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal_db_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d46777146f2d3ee1",
            "route_table_id": "rtb-0a7cd97d0bc981b89",
            "subnet_id": "subnet-02913997209ffdf66"
          },
          "dependencies": [
            "aws_route_table.internal_db_subnet_c",
            "aws_subnet.internal_db_subnet_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redis_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0001e1902421ccd9f",
            "route_table_id": "rtb-09eddc77146674c01",
            "subnet_id": "subnet-09fad66e8bc4aabb3"
          },
          "dependencies": [
            "aws_route_table.redis_subnet_a",
            "aws_subnet.redis_subnet_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redis_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0687b1f3d5dfafd",
            "route_table_id": "rtb-0e7bec63b84d4bb5e",
            "subnet_id": "subnet-0d9228424c225eebe"
          },
          "dependencies": [
            "aws_route_table.redis_subnet_c",
            "aws_subnet.redis_subnet_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:security-group/sg-0dcfd8c7b98fa378f",
            "description": "Security Group for new Internal RDS Database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0dcfd8c7b98fa378f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.11.0/24"
                ],
                "description": "Ingress from VPC",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "NewInternalRDSDatabaseSG",
            "name_prefix": "",
            "owner_id": "352515133004",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:security-group/sg-01454a39fee769ccb",
            "description": "Security Group for new RDS Database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress SMTP",
                "from_port": 587,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              }
            ],
            "id": "sg-01454a39fee769ccb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.9.0/24"
                ],
                "description": "Ingress from VPC",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "NewRDSDatabaseSG",
            "name_prefix": "",
            "owner_id": "352515133004",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:security-group/sg-08fedfbb8a0d89bc1",
            "description": "Security Group for new Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All TCP Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-08fedfbb8a0d89bc1",
            "ingress": [],
            "name": "NewRedisSG",
            "name_prefix": "",
            "owner_id": "352515133004",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "smtp_vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:security-group/sg-07d4da9d04811c019",
            "description": "Security group for SMTP VPC endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d4da9d04811c019",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "smtp-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "352515133004",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_rds_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.11.0/24"
            ],
            "description": "Ingress from VPC",
            "from_port": 1433,
            "id": "sgrule-1050616628",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dcfd8c7b98fa378f",
            "security_group_rule_id": "sgr-0b108e398eeaf1c9f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 1433,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.internal_rds_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.9.0/24"
            ],
            "description": "Ingress from VPC",
            "from_port": 1433,
            "id": "sgrule-1039574077",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01454a39fee769ccb",
            "security_group_rule_id": "sgr-09785b88d598bd2b8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 1433,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:subnet/subnet-02bac0435962aa8b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bac0435962aa8b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352515133004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NewDatabaseSubnetA"
            },
            "tags_all": {
              "Name": "NewDatabaseSubnetA"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:subnet/subnet-015fcb0d2d0041386",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015fcb0d2d0041386",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352515133004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NewDatabaseSubnetB"
            },
            "tags_all": {
              "Name": "NewDatabaseSubnetB"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:subnet/subnet-0c1d29b7373748f4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1d29b7373748f4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352515133004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NewDatabaseSubnetC"
            },
            "tags_all": {
              "Name": "NewDatabaseSubnetC"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal_db_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:subnet/subnet-0a07d53dd706cb5f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.10.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a07d53dd706cb5f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352515133004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NewInternalDatabaseSubnetA"
            },
            "tags_all": {
              "Name": "NewInternalDatabaseSubnetA"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "internal_db_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:subnet/subnet-02913997209ffdf66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.10.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02913997209ffdf66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352515133004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NewInternalDatabaseSubnetB"
            },
            "tags_all": {
              "Name": "NewInternalDatabaseSubnetB"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redis_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:subnet/subnet-09fad66e8bc4aabb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fad66e8bc4aabb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352515133004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NewRedisSubnetA"
            },
            "tags_all": {
              "Name": "NewRedisSubnetA"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redis_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:subnet/subnet-0d9228424c225eebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.10.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9228424c225eebe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352515133004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NewRedisSubnetC"
            },
            "tags_all": {
              "Name": "NewRedisSubnetC"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "smtp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:vpc-endpoint/vpce-0e1c379ee11f0b93d",
            "dns_entry": [
              {
                "dns_name": "vpce-0e1c379ee11f0b93d-vg4e1z32.email-smtp.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-0e1c379ee11f0b93d-vg4e1z32-ap-southeast-2b.email-smtp.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "vpce-0e1c379ee11f0b93d-vg4e1z32-ap-southeast-2a.email-smtp.ap-southeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZDK2GCRPAFKGO"
              },
              {
                "dns_name": "email-smtp.ap-southeast-2.amazonaws.com",
                "hosted_zone_id": "Z09853431K4KP2CA6QQI6"
              },
              {
                "dns_name": "email-smtp.ap-southeast-2.api.aws",
                "hosted_zone_id": "Z100711033PSW595G0BIL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e1c379ee11f0b93d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02a39f73127cf764f",
              "eni-06e692adf298cceeb"
            ],
            "owner_id": "352515133004",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-07d4da9d04811c019"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.email-smtp",
            "service_region": "ap-southeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.3.170",
                "subnet_id": "subnet-02bac0435962aa8b5"
              },
              {
                "ipv4": "10.10.4.188",
                "subnet_id": "subnet-015fcb0d2d0041386"
              }
            ],
            "subnet_ids": [
              "subnet-015fcb0d2d0041386",
              "subnet-02bac0435962aa8b5"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "dependencies": [
            "aws_security_group.smtp_vpc_endpoint_sg",
            "aws_subnet.db_subnet_a",
            "aws_subnet.db_subnet_b",
            "aws_subnet.db_subnet_c"
          ]
        }
      ]
    }
  ]
}